--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,33 @@
   font-family: sans-serif;
   text-align: center;
 }
+
+button {
+  padding: 0.25rem;
+}
+
+.exerciseList {
+  margin: 0.5rem;
+  padding: 1rem;
+  list-style: none;
+  border-color: black;
+  border-style: solid;
+  border-radius: 0.5rem;
+}
+
+.ButtonContainer {
+  padding: 0.25rem;
+}
+
+.exerciseImg {
+  display: block;
+  margin: auto;
+  padding: 1rem;
+  height: 200px;
+  width: 200px;
+}
+
+.aboutExercise {
+  color: blue;
+  max-width: 100px;
+}
